syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService{
    rpc GetDicount(GetDiscountRequest) returns (CouponModel);
    rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel);
    rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);
    rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest{
    string productName = 1;
}

message CouponModel{
    int32 id = 1;
    string productName = 2;
    string description = 3;
    int32 amount = 4;
}

message CreateDiscountResquest{
   CouponModel coupon = 1;
}

message UpdateDiscountResquest{
   CouponModel coupon = 1;
}

message DeleteDiscountResquest{
   CouponModel productName = 1;
}

message DeleteDiscountResponse{
   bool success = 1;
}